# 4arithmetic

./: .gitignore  4arithmetic.sln  CMakeLists.txt
4arithmetic/: 4arithmetic.vcxproj  4arithmetic.vcxproj.filters
4arithmeticTest/: 4arithmeticTest.vcxproj  4arithmeticTest.vcxproj.filters  FractionTest.cpp  stdafx.cpp  stdafx.h
4arithmeticTest/Debug/: 4arithmeticTest.pch.codeanalysis  4arithmeticTest.pch.codeanalysisast  vc141.idb
4arithmeticTest/Debug/4arithmeticTest.tlog/: 4arithmeticTest.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
4arithmeticTest/Release/4arithmeticTest.tlog/: 4arithmeticTest.lastbuildstate  4arithmeticTest.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: Combination.h  Expression.h  FourArithmeticProblem.h  Fraction.h  Util.h
lib/Release/Win32/: gtest-md.lib
src/: 4arithmetic.cpp  Combination.cpp  Expression.cpp  FourArithmeticProblem.cpp  FourArithmeticProblem.h  Fraction.cpp  Fraction.h  Util.cpp  stdafx.cpp  stdafx.h
